# ECE4554_Project

./: .gitignore  README.md
initial/: .gitignore  README.md  initial.ipynb  pyproject.toml  rps.yaml  unzip.py
initial/dataset_original/train/: paper.cache
initial/dataset_original/train/scissors/: scissors_262.txt
initial/dataset_original/valid/: paper.cache
initial/rpc/: initial.ipynb  initial2.ipynb
initial/rpc/dataset_original/: README.dataset.txt  README.roboflow.txt  data.yaml
initial/rpc/dataset_original/test/labels/: paper-hires1_png_jpg.rf.3343c400f936d578c71dbc3fd2fafa40.txt  paper-hires2_png_jpg.rf.89a30417fc33af2dc6a0722f621ec10b.txt  paper1_png_jpg.rf.b3b03cc59eaa7d743bd56d2b35e109a5.txt  paper2_png_jpg.rf.2532b78e1b35bb3a747798d07161c504.txt  paper3_png_jpg.rf.389b94a118525e616f637c011ce53df1.txt  paper4_png_jpg.rf.6ede6974f322f712b890123ec94030c7.txt  paper5_png_jpg.rf.53dd3821c5018db88e724b349c741543.txt  paper6_png_jpg.rf.303343855b5f4972ce2c40d01e8ff763.txt  paper7_png_jpg.rf.bdfdae90b8e2d5bb81cdf25685a28a14.txt  paper8_png_jpg.rf.696ca969a2a70a8370c7b80ab0748f35.txt  paper9_png_jpg.rf.247bd6c7f255c63581ffe2f0dce82576.txt  paper_10_jpg.rf.7e64090c25faee71de0281cc6e452f3f.txt  paper_11_jpg.rf.229e2520591fe57da27bee6991ebed2b.txt  paper_16_jpg.rf.c6ee5902ddb090f3028652a3d2273d28.txt  paper_17_v2_jpg.rf.9836dbbf17e850ca7d2f905dcd580b39.txt  paper_5_jpg.rf.1635e51ebb1ca56f18c7c712c12dad9b.txt  rock1_png_jpg.rf.9215fd4295f2448737f7f72d9b3a2ff4.txt  (+28 more)
initial/rpc/dataset_original/train/: labels.cache
initial/rpc/dataset_original/valid/: labels.cache
(+1032 files in other folders)
